--- a/style.css
+++ b/style.css
@@ -5,19 +5,18 @@
   --header-height: 3rem;
 
   /*===== Colors =====*/
-  --light-color: #fbf9f9;
+  --primary-color: #fbf9f9;
   --middle-color: #949494;
   --dark-color: rgb(53, 53, 53);
-  --black-color: #000;
+  --secondary-color: #000;
   --orange-color: #ffbe47;
 
   /*===== Font and typography =====*/
   --body-font: "Josefin Sans", sans-serif;
   --header-font: "Righteous", cursive;
-  --biggest-font-size: 2.5rem;
-  --h1-font-size: 1.5rem;
-  --h2-font-size: 1.25rem;
-  --h3-font-size: 1.125rem;
+  --h2-font-size: 1.5rem;
+  --h3-font-size: 1.25rem;
+  --h4-font-size: 1.125rem;
   --normal-font-size: 1.125rem;
   --small-font-size: 0.813rem;
   --smaller-font-size: 0.75rem;
@@ -33,19 +32,22 @@
   --mb-3: 1.5rem;
   --mb-4: 2rem;
   --mb-5: 2.5rem;
-  --mb-6: 3rem;
 
   /*===== z index =====*/
-  --z-normal: 1;
   --z-middle: 10;
-  --z-top: 100;
+  --z-top: 20;
+}
+
+.dark-theme {
+  --primary-color: rgb(29, 29, 29);
+  --secondary-color: #fbf9f9;
 }
 
 @media screen and (min-width: 768px) {
   :root {
     --biggest-font-size: 4.5rem;
-    --h2-font-size: 1.5rem;
-    --h3-font-size: 1.25rem;
+    --h3-font-size: 1.5rem;
+    --h4-font-size: 1.25rem;
     --normal-font-size: 1rem;
     --small-font-size: 0.875rem;
     --smaller-font-size: 0.813rem;
@@ -68,8 +70,8 @@ body {
   font-family: var(--body-font);
   font-size: var(--normal-font-size);
   font-weight: var(--font-medium);
-  background-color: var(--light-color);
-  color: var(--dark-color);
+  background-color: var(--primary-color);
+  color: var(--secondary-color);
   line-height: 1.6;
 }
 
@@ -113,7 +115,7 @@ img {
 }
 
 .section__title {
-  font-size: var(--h1-font-size);
+  font-size: var(--h2-font-size);
   color: var(--orange-color);
   margin-bottom: var(--mb-3);
 }
@@ -128,6 +130,7 @@ img {
   opacity: 1;
   transition: 1.5s;
 }
+
 .hidden {
   opacity: 0;
   transform: translateY(16rem);
@@ -141,6 +144,7 @@ img {
   margin-left: var(--mb-2);
   margin-right: var(--mb-2);
 }
+
 .bd__grid {
   display: grid;
   gap: 1.5rem;
@@ -169,7 +173,7 @@ img {
 .nav__logo {
   font-family: var(--header-font);
   text-transform: uppercase;
-  font-size: var(--h1-font-size);
+  font-size: var(--h2-font-size);
   color: var(--orange-color);
 }
 
@@ -190,67 +194,33 @@ img {
   justify-content: flex-end;
   align-items: center;
   z-index: var(--z-top);
+  color: var(--primary-color);
+  transition: all 0.5s;
 }
 
 .language__selector {
+  width: 3.5rem;
   margin: var(--mb-1) var(--mb-1) 0;
   display: flex;
   justify-content: space-between;
   align-items: center;
+  margin-left: var(--mb-3);
 }
+
 .screen__mode {
   margin: var(--mb-1) var(--mb-1) 0 0;
   display: flex;
   justify-content: space-between;
   align-items: center;
-}
-
-@media screen and (max-width: 768px) {
-  .nav__list {
-    position: fixed;
-    top: 0;
-    right: -40%;
-    width: 40%;
-    padding-top: 4.5rem;
-    display: flex;
-    flex-direction: column;
-    background-color: rgba(255, 255, 255, 0.7);
-    transition: 0.4s;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    border-radius: 0 0 0 1rem;
-  }
-  .scroll-header .nav__list {
-    top: var(--header-height);
-    padding-top: 1.5rem;
-  }
-}
-
-.nav__menu--show .nav__list {
-  right: 0;
-}
-
-.nav__item {
-  text-align: center;
-  margin: var(--mb-1) 0 var(--mb-3);
-}
-
-.nav__link {
-  color: var(--dark-color);
-  font-size: var(--h3-font-size);
-  font-weight: var(--font-semi-bold);
-  transition: 0.3s;
-}
-
-.nav__link:hover {
-  color: var(--orange-color);
+  margin-left: var(--mb-1);
 }
 
 .hamburger {
-  color: var(--light-color);
+  color: var(--primary-color);
   cursor: pointer;
   width: 1.6rem;
   height: 1.6rem;
-  margin-left: 0.6rem;
+  margin-left: var(--mb-1);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -287,6 +257,44 @@ img {
   transform: rotate(135deg);
 }
 
+@media screen and (max-width: 768px) {
+  .nav__list {
+    position: fixed;
+    top: 0;
+    right: -40%;
+    width: 40%;
+    padding-top: 4.5rem;
+    display: flex;
+    flex-direction: column;
+    background-color: rgba(255, 255, 255, 0.7);
+    transition: 0.4s;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    border-radius: 0 0 0 1rem;
+  }
+  .scroll-header .nav__list {
+    top: var(--header-height);
+    padding-top: 1.5rem;
+  }
+}
+
+.nav__menu--show .nav__list {
+  right: 0;
+}
+
+.nav__item {
+  text-align: center;
+  margin: var(--mb-1) 0 var(--mb-3);
+}
+
+.nav__link {
+  font-weight: var(--font-semi-bold);
+  color: #000;
+}
+
+.nav__link:hover {
+  color: var(--orange-color);
+}
+
 .nav__menu--show .bar:before,
 .nav__menu--show .bar:after {
   top: 0;
@@ -308,12 +316,22 @@ img {
 }
 
 .scroll-header {
-  background-color: var(--light-color);
+  background-color: var(--primary-color);
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
 .scroll-header .nav__list {
-  background-color: var(--light-color);
+  background-color: var(--primary-color);
+}
+
+.scroll-header .nav__buttons {
+  color: var(--secondary-color);
+}
+
+.scroll-header .nav__link {
+  color: var(--secondary-color);
+  /* font-size: var(--normal-font-size); */
+  transition: 0.3s;
 }
 
 .scroll__top {
@@ -323,7 +341,6 @@ img {
   display: flex;
   justify-content: center;
   align-items: center;
-  pad: 0.5rem;
   background-color: rgba(219, 219, 219, 0.8);
   border-radius: 0.5rem;
   z-index: var(--z-middle);
@@ -337,7 +354,7 @@ img {
 
 .scrolltop__icon {
   padding: 0.3rem;
-  font-size: 1.5rem;
+  font-size: var(--h2-font-size);
   color: var(--orange-color);
 }
 
@@ -364,16 +381,112 @@ img {
 
 .home__greeting {
   height: 70%;
+  width: 200%;
   transform-origin: top left;
   transform: rotateY(52deg);
-  color: var(--black-color);
+  color: #000;
+  opacity: 1;
+  padding-left: 0;
+  transition: all 2s;
 }
 
-.home__hi {
+.greeting__slide {
+  animation: slide 5s infinite;
+  -webkit-animation: slide 5s infinite;
+}
+
+.greeting__text {
   padding-top: 10rem;
   font-size: 8rem;
   font-weight: var(--font-bold);
   text-shadow: 0 2px 4px black;
+  transform-origin: 300px bottom;
+  animation: roll 5s infinite;
+  -webkit-animation: roll 5s infinite;
+}
+
+@keyframes slide {
+  0% {
+    transform: translateX(0);
+  }
+  70% {
+    transform: translateX(0);
+  }
+  85% {
+    transform: translateX(-450px);
+    opacity: 1;
+  }
+  86% {
+    transform: translateX(-450px);
+    opacity: 0;
+  }
+  87% {
+    transform: translateX(450px);
+    opacity: 0;
+  }
+  100% {
+    transform: translateX(0px);
+  }
+}
+
+@-webkit-keyframes slide {
+  0% {
+    transform: translateX(0);
+  }
+  70% {
+    transform: translateX(-450px);
+  }
+  85% {
+    transform: translateX(-450px);
+    opacity: 1;
+  }
+  86% {
+    transform: translateX(-450px);
+    opacity: 0;
+  }
+  87% {
+    transform: translateX(450px);
+    opacity: 0;
+  }
+  100% {
+    transform: translateX(0px);
+  }
+}
+
+@keyframes roll {
+  0% {
+    transform: rotateZ(0);
+  }
+  70% {
+    transform: rotateZ(0);
+  }
+  80% {
+    transform: rotateZ(20deg);
+  }
+  90% {
+    transform: rotateZ(20deg);
+  }
+  100% {
+    transform: rotateZ(0px);
+  }
+}
+
+@-webkit-keyframes roll {
+  0% {
+    transform: rotateZ(0);
+  }
+  70% {
+    transform: rotateZ(0);
+  }
+  80% {
+    transform: rotateZ(20deg);
+  }
+  90% {
+    transform: rotateZ(20deg);
+  }
+  100% {
+    transform: rotateZ(0px);
+  }
 }
 
 .home__bottom {
@@ -386,29 +499,36 @@ img {
 .home__social {
   display: flex;
   flex-direction: column;
+  opacity: 1;
+  transform: translateX(0);
+  transition: all 1s;
 }
 
-.home__social-icon {
+.social-icon {
   width: max-content;
   font-size: 1.6rem;
-  margin-bottom: var(--mb-2);
-  color: var(--light-color);
+  margin: var(--mb-1);
+  color: #fbf9f9;
   transition: all 0.4s;
 }
 
-.home__social-icon:hover {
+.social-icon:hover {
+  color: var(--orange-color);
   transform: scale(1.1);
 }
 
 .home__introduction {
   text-align: right;
-  border-right: 0.2rem solid var(--light-color);
+  border-right: 0.2rem solid var(--primary-color);
   padding-right: 1rem;
+  opacity: 1;
+  transform: translateX(0);
+  transition: all 0.5s;
 }
 
 .home__iam,
 .home__profession {
-  color: var(--light-color);
+  color: #fbf9f9;
 }
 
 .home__iam {
@@ -428,11 +548,11 @@ img {
   display: inline-block;
   text-transform: uppercase;
   background-color: var(--orange-color);
-  color: var(--black-color);
+  color: var(--secondary-color);
   font-weight: var(--font-semi-bold);
   padding: 0.75rem 1rem;
   border-radius: 0.25rem;
-  transition: 0.3s;
+  transition: 0.4s;
 }
 
 .button:hover {
@@ -440,16 +560,16 @@ img {
 }
 
 .button-light {
-  background-color: var(--light-color);
+  background-color: var(--primary-color);
 }
 
 .button-white {
-  background-color: var(--light-color);
+  background-color: var(--primary-color);
   color: var(--first-color-dark);
 }
 
 .button-white:hover {
-  background-color: var(--light-color);
+  background-color: var(--primary-color);
 }
 
 .button-link {
@@ -460,6 +580,21 @@ img {
 
 .button-link:hover {
   background: none;
+}
+
+.greeting__hidden {
+  opacity: 0;
+  padding-left: 500px;
+}
+
+.social__hidden {
+  opacity: 0;
+  transform: translateX(-100%);
+}
+
+.introduction__hidden {
+  opacity: 0;
+  transform: translateX(100%);
 }
 
 /* ABOUT */
@@ -474,13 +609,13 @@ img {
 
 .about__description span {
   text-align: left;
-  font-size: var(--h2-font-size);
+  font-size: var(--h3-font-size);
   font-weight: var(--font-semi-bold);
   color: var(--orange-color);
 }
 
 .about__number {
-  font-size: var(--h1-font-size);
+  font-size: var(--h2-font-size);
   color: var(--orange-color);
   display: block;
 }
@@ -495,6 +630,7 @@ img {
   border-radius: 50%;
   border: 2px solid var(--orange-color);
 }
+
 .about__img img {
   width: 100%;
   height: auto;
@@ -508,14 +644,15 @@ img {
 }
 
 .skills__title {
-  font-size: var(--h2-font-size);
-  color: var(--black-color);
+  font-size: var(--h3-font-size);
+  color: var(--secondary-color);
   display: flex;
   align-items: center;
+  transition: all 1s;
 }
 
 .skills__title-icon {
-  font-size: 1.5rem;
+  font-size: var(--h2-font-size);
   margin-right: var(--mb-1);
   margin-bottom: 0.3rem;
 }
@@ -583,14 +720,14 @@ img {
 }
 
 .qualification__title {
-  font-size: var(--h2-font-size);
+  font-size: var(--h3-font-size);
   margin-bottom: var(--mb-2);
   display: flex;
   align-items: center;
 }
 
 .qualification__title-icon {
-  font-size: 1.5rem;
+  font-size: var(--h2-font-size);
   margin-right: var(--mb-1);
   margin-bottom: 0.4rem;
 }
@@ -603,7 +740,6 @@ img {
 .qualification__area {
   font-size: var(--normal-font-size);
   margin-bottom: var(--mb-1);
-  font-weight: var(--font-medium);
 }
 
 .qualification-icon {
@@ -621,7 +757,7 @@ img {
 
 .services__data {
   padding: 3rem 1rem;
-  background-color: #fff;
+  background-color: var(--primary-color);
   border-radius: 0.5rem;
   text-align: center;
   transition: 0.4s;
@@ -639,7 +775,7 @@ img {
 }
 
 .services__title {
-  font-size: var(--h3-font-size);
+  font-size: var(--h4-font-size);
 }
 
 .services__description {
@@ -656,7 +792,7 @@ img {
 .project__container {
   padding: 1.5rem 1rem;
   background-color: var(--orange-color);
-  color: var(--dark-color);
+  color: var(--secondary-color);
   border-radius: 0.5rem;
   text-align: center;
 }
@@ -671,7 +807,7 @@ img {
 }
 
 .project__title {
-  font-size: 1.5rem;
+  font-size: var(--h2-font-size);
 }
 
 .project__description {
@@ -691,10 +827,10 @@ img {
 }
 
 .portfolio__content {
-  background-color: #fff;
+  background-color: var(--primary-color);
   border-radius: 0.5rem;
   overflow: hidden;
-  box-shadow: 0 4px 6 px rgba(174, 190, 205, 0.3);
+  box-shadow: 0 4px 6px rgba(174, 190, 205, 0.3);
 }
 
 .portfolio__img {
@@ -708,11 +844,11 @@ img {
 
 .portfolio__subtitle {
   font-size: var(--small-font-size);
-  color: var(--light-color);
+  color: var(--primary-color);
 }
 
 .portfolio__title {
-  font-size: var(--h3-font-size);
+  font-size: var(--h4-font-size);
   color: var(--first-color);
   margin: var(--mb-2) 0;
 }
@@ -735,11 +871,11 @@ img {
 .testimonial__content {
   display: grid;
   background-color: var(--first-color-dark);
-  color: var(--light-color);
+  color: var(--primary-color);
   border-radius: 0.5rem;
   padding: 2rem 1rem;
   text-align: center;
-  box-shadow: 0 4px 6px rgba(47, 10, 13, 0.25);
+  box-shadow: 0 4px 6px rgba(174, 190, 205, 0.4);
 }
 
 .testimonial__img {
@@ -752,7 +888,7 @@ img {
 
 .testimonial__client {
   font-size: var(--small-font-size);
-  color: var(--light-color);
+  color: var(--primary-color);
   margin-bottom: var(--mb-2);
 }
 
@@ -767,7 +903,7 @@ img {
 }
 
 .contact__box {
-  background-color: #fff;
+  background-color: var(--primary-color);
   border-radius: 0.5rem;
   padding: 1.5rem;
   text-align: center;
@@ -776,7 +912,7 @@ img {
 
 .contact__icon,
 .contact__title {
-  color: var(--black-color);
+  color: var(--secondary-color);
 }
 
 .contact__icon {
@@ -784,12 +920,12 @@ img {
 }
 
 .contact__title {
-  font-size: var(--h3-font-size);
+  font-size: var(--h4-font-size);
   margin: var(--mb-1) 0;
 }
 
 .contact__social {
-  color: var(--black-color);
+  color: var(--secondary-color);
   font-size: 1.25rem;
   margin: 0 var(--mb-1);
 }
@@ -813,14 +949,14 @@ img {
 .contact__input {
   width: 100%;
   padding: 1rem;
-  border: 2px solid var(--light-color);
-  color: var(--black-color);
+  border: 2px solid var(--primary-color);
+  color: var(--secondary-color);
   border-radius: 0.5rem;
   margin-bottom: var(--mb-1);
 }
 
 .contact::placeholder {
-  color: var(--light-color);
+  color: var(--primary-color);
   font-size: var(--font-semi-bold);
 }
 
@@ -833,7 +969,7 @@ img {
 
 .footer {
   background-color: var(--dark-color);
-  color: var(--light-color);
+  color: #fbf9f9;
   text-align: center;
 }
 
@@ -842,9 +978,10 @@ img {
 }
 
 .footer__title {
-  font-size: var(--h1-font-size);
+  font-size: var(--h2-font-size);
   margin-bottom: var(--mb-1);
   font-weight: var(--font-semi-bold);
+  color: var(--orange-color);
 }
 
 .footer__description {
@@ -857,18 +994,18 @@ img {
 
 .footer__link {
   font-size: 1.4rem;
-  color: var(--light-color);
+  color: #fbf9f9;
   margin: 0 var(--mb-1);
-  transition: 0.3s;
+  transition: 0.4s;
 }
 
 .footer__link:hover {
-  color: var(--light-color);
+  color: #fbf9f9;
 }
 
 .footer__copy {
   font-size: var(--smaller-font-size);
-  color: var(--light-color);
+  color: #fbf9f9;
 }
 
 /* MEDIA QUERIES */
