--- a/style.css
+++ b/style.css
@@ -205,6 +205,12 @@ img {
   justify-content: space-between;
   align-items: center;
   margin-left: var(--mb-3);
+  cursor: pointer;
+}
+
+.language__active {
+  color: var(--orange-color);
+  font-weight: var(--font-semi-bold);
 }
 
 .screen__mode {
@@ -670,7 +676,7 @@ img {
   padding: 0.5rem 1rem;
   margin-bottom: var(--mb-1);
   border-radius: 0.5rem;
-  box-shadow: 0 4px 25px rgba(14, 36, 49, 0.15);
+  box-shadow: 0 4px 12px rgba(174, 190, 205, 0.3);
 }
 
 .skills__icon {
@@ -739,6 +745,7 @@ img {
 
 .qualification__area {
   font-size: var(--normal-font-size);
+  color: var(--orange-color);
   margin-bottom: var(--mb-1);
 }
 
@@ -761,7 +768,7 @@ img {
   border-radius: 0.5rem;
   text-align: center;
   transition: 0.4s;
-  box-shadow: 0 4px 6px rgba(174, 190, 205, 0.3);
+  box-shadow: 0 4px 12px rgba(174, 190, 205, 0.3);
 }
 
 .services__icon,
@@ -784,7 +791,7 @@ img {
 
 .services__data:hover {
   transform: translateY(-0.5rem);
-  box-shadow: 0 6px 8px rgba(174, 190, 205, 0.4);
+  box-shadow: 0 6px 12px rgba(174, 190, 205, 0.4);
 }
 
 /* Project */
@@ -830,7 +837,7 @@ img {
   background-color: var(--primary-color);
   border-radius: 0.5rem;
   overflow: hidden;
-  box-shadow: 0 4px 6px rgba(174, 190, 205, 0.3);
+  box-shadow: 0 4px 12px rgba(174, 190, 205, 0.3);
 }
 
 .portfolio__img {
@@ -854,7 +861,7 @@ img {
 }
 
 .portfolio__content:hover {
-  box-shadow: 0 6px 8px rgba(174, 190, 205, 0.4);
+  box-shadow: 0 6px 12px rgba(174, 190, 205, 0.4);
 }
 
 .portfolio__content:hover .portfolio__img {
@@ -875,7 +882,7 @@ img {
   border-radius: 0.5rem;
   padding: 2rem 1rem;
   text-align: center;
-  box-shadow: 0 4px 6px rgba(174, 190, 205, 0.4);
+  box-shadow: 0 4px 12px rgba(174, 190, 205, 0.4);
 }
 
 .testimonial__img {
@@ -907,7 +914,7 @@ img {
   border-radius: 0.5rem;
   padding: 1.5rem;
   text-align: center;
-  box-shadow: 0 4px 6px rgba(174, 190, 205, 0.3);
+  box-shadow: 0 4px 12px rgba(174, 190, 205, 0.3);
 }
 
 .contact__icon,
@@ -921,6 +928,7 @@ img {
 
 .contact__title {
   font-size: var(--h4-font-size);
+  color: var(--orange-color);
   margin: var(--mb-1) 0;
 }
 
@@ -931,7 +939,7 @@ img {
 }
 
 .contact__box:hover {
-  box-shadow: 0 6px 8px rgba(174, 190, 205, 0.4);
+  box-shadow: 0 6px 12px rgba(174, 190, 205, 0.4);
 }
 
 .contact__inputs {
@@ -961,6 +969,8 @@ img {
 }
 
 .contact__button {
+  display: block;
+  margin: auto;
   cursor: pointer;
   border: none;
 }
