--- a/style.css
+++ b/style.css
@@ -753,9 +753,33 @@ img {
   padding: 3rem 1rem;
   background-color: var(--primary-color);
   border-radius: 0.5rem;
-  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   transition: 0.4s;
   box-shadow: 0 4px 12px rgba(174, 190, 205, 0.3);
+}
+.card__container {
+  position: relative;
+  height: 12rem;
+  width: 12rem;
+
+  transform-style: preserve-3d;
+  transition: transform 1s ease-in-out;
+}
+
+.card {
+  text-align: center;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  backface-visibility: hidden;
+}
+.card-back {
+  transform: rotateY(180deg);
+}
+.card--clicked {
+  transform: rotateY(180deg);
 }
 
 .service__icon,
