--- a/style.css
+++ b/style.css
@@ -322,6 +322,17 @@ img {
   background-color: var(--orange-color);
 }
 
+.dark-theme .nav__list {
+  background-color: var(--primary-color);
+}
+
+.dark-theme .nav__link {
+  color: var(--secondary-color);
+}
+
+.dark-theme .nav__buttons {
+  color: var(--secondary-color);
+}
 .scroll-header {
   background-color: var(--primary-color);
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
@@ -552,12 +563,12 @@ img {
 }
 
 .button {
-  display: inline-block;
   text-transform: uppercase;
   background-color: var(--orange-color);
   color: var(--secondary-color);
   font-weight: var(--font-semi-bold);
   padding: 0.75rem 1rem;
+  border: none;
   border-radius: 0.25rem;
   transition: 0.4s;
 }
@@ -580,9 +591,8 @@ img {
 }
 
 .button-link {
-  background: none;
-  color: var(--first-color);
-  padding: 0;
+  background: var(--orange-color);
+  color: var(--secondary-color);
 }
 
 .button-link:hover {
@@ -868,7 +878,7 @@ img {
 
 .portfolio__title {
   font-size: var(--h4-font-size);
-  color: var(--first-color);
+  color: var(--secondary-color);
   margin: var(--mb-2) 0;
 }
 
@@ -1028,6 +1038,37 @@ img {
 .footer__copy {
   font-size: var(--smaller-font-size);
   color: #fbf9f9;
+}
+
+/* MODAL */
+
+.modal {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  max-width: 100%;
+  background-color: var(--primary-color);
+  padding: 1rem 1rem;
+  box-shadow: 0 4rem 6rem rgba(0, 0, 0, 0.3);
+  z-index: 40;
+  transition: all 0.5s;
+}
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  backdrop-filter: blur(4px);
+  z-index: 30;
+  transition: all 0.5s;
+}
+
+.modal--hidden {
+  visibility: hidden;
+  opacity: 0;
 }
 
 /* MEDIA QUERIES */
