--- a/style.css
+++ b/style.css
@@ -195,7 +195,7 @@ img {
   justify-content: flex-end;
   align-items: center;
   z-index: var(--z-top);
-  color: var(--primary-color);
+  color: var(--middle-color);
   transition: all 0.5s;
 }
 
@@ -264,6 +264,12 @@ img {
   transform: rotate(135deg);
 }
 
+.nav__menu--show .bar:before,
+.nav__menu--show .bar:after {
+  top: 0;
+  transform: rotate(90deg);
+}
+
 @media screen and (max-width: 768px) {
   .nav__list {
     position: fixed;
@@ -295,31 +301,26 @@ img {
 
 .nav__link {
   font-weight: var(--font-semi-bold);
+  position: relative;
   color: #000;
 }
-
-.nav__link:hover {
-  color: var(--orange-color);
-}
-
-.nav__menu--show .bar:before,
-.nav__menu--show .bar:after {
-  top: 0;
-  transform: rotate(90deg);
-}
-
-.active-link {
-  position: relative;
-}
-
-.active-link::after {
+.nav__link::after {
   content: "";
   position: absolute;
   bottom: -0.7rem;
   left: 0;
-  width: 100%;
+  width: 0%;
   height: 3px;
   background-color: var(--orange-color);
+  transition: all 0.5s;
+}
+
+.active-link::after {
+  width: 100%;
+}
+
+.nav__link:hover {
+  color: var(--orange-color);
 }
 
 .dark-theme .nav__list {
@@ -333,6 +334,7 @@ img {
 .dark-theme .nav__buttons {
   color: var(--secondary-color);
 }
+
 .scroll-header {
   background-color: var(--primary-color);
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
@@ -570,6 +572,7 @@ img {
   padding: 0.75rem 1rem;
   border: none;
   border-radius: 0.25rem;
+  outline: none;
   transition: 0.4s;
 }
 
@@ -638,7 +641,6 @@ img {
 }
 
 .about__img {
-  display: block;
   justify-self: center;
   position: relative;
   width: 220px;
@@ -873,7 +875,7 @@ img {
 
 .portfolio__subtitle {
   font-size: var(--small-font-size);
-  color: var(--primary-color);
+  color: var(--secondary-color);
 }
 
 .portfolio__title {
@@ -899,8 +901,8 @@ img {
 
 .testimonial__content {
   display: grid;
-  background-color: var(--first-color-dark);
-  color: var(--primary-color);
+  background-color: var(--primary-color);
+  color: var(--secondary-color);
   border-radius: 0.5rem;
   padding: 2rem 1rem;
   text-align: center;
@@ -908,16 +910,24 @@ img {
 }
 
 .testimonial__img {
+  position: relative;
   width: 80px;
   height: 80px;
+  overflow: hidden;
   border-radius: 50%;
   justify-self: center;
   margin-bottom: var(--mb-1);
 }
 
+.testimonial__img img {
+  width: 100%;
+  height: auto;
+  margin-top: -20px;
+}
+
 .testimonial__client {
   font-size: var(--small-font-size);
-  color: var(--primary-color);
+  color: var(--orange-color);
   margin-bottom: var(--mb-2);
 }
 
@@ -1047,13 +1057,27 @@ img {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  max-width: 100%;
+  width: 100%;
   background-color: var(--primary-color);
+  color: var(--secondary-color);
   padding: 1rem 1rem;
   box-shadow: 0 4rem 6rem rgba(0, 0, 0, 0.3);
   z-index: 40;
   transition: all 0.5s;
 }
+
+.modal__close {
+  cursor: pointer;
+  position: absolute;
+  height: 1.6rem;
+  width: 1.6rem;
+  top: 1rem;
+  right: 1rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .overlay {
   position: fixed;
   top: 0;
@@ -1071,13 +1095,43 @@ img {
   opacity: 0;
 }
 
+.modal__container {
+  padding: 2rem 0;
+  width: 100%;
+  height: 80%;
+}
+
+.x {
+  position: relative;
+  width: 1.3rem;
+}
+
+.x::after,
+.x::before {
+  position: absolute;
+  content: "";
+  width: 1.3rem;
+  height: 3px;
+  background-color: var(--orange-color);
+  border-radius: 2px;
+}
+
+.x::after {
+  transform: rotate(45deg);
+}
+
+.x::before {
+  transform: rotate(-45deg);
+}
+
 /* MEDIA QUERIES */
 
 @media screen and (min-width: 576px) {
   .about__container,
   .skills__container,
   .services__container,
-  .portfolio__container {
+  .portfolio__container,
+  .modal__container {
     grid-template-columns: repeat(2, 1fr);
   }
 
